infrastructure/traefik/dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure-ca
    - name: traefik-gateway
      sectionName: websecure-com
  hostnames:
    - "traefik.travisprosser.ca"
    - "traefik.travisprosser.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api@internal
          kind: TraefikService
          group: traefik.io
